; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsnumber.c_jsB_new_Number.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsnumber.c_jsB_new_Number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @jsB_new_Number to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jsB_new_Number(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @js_gettop(i32* %4)
  %6 = icmp sgt i32 %5, 1
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @js_tonumber(i32* %8, i32 1)
  br label %11

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %10, %7
  %12 = phi i32 [ %9, %7 ], [ 0, %10 ]
  %13 = call i32 @js_newnumber(i32* %3, i32 %12)
  ret void
}

declare dso_local i32 @js_newnumber(i32*, i32) #1

declare dso_local i32 @js_gettop(i32*) #1

declare dso_local i32 @js_tonumber(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
